# SWARM

./: .gitignore  CLAUDE.md  ORCHESTRATOR_TERMINAL_AGENTS_INTEGRATION_PLAN.md  README.md  SWARM_System_Design_RU.md  TERMINAL_AGENTS_SYSTEM_DESIGN.md  TODO_M5_REFACTOR.md  USER_GUIDE.md  pyproject.toml
.claude/skills/swarm-agent/: SKILL.md
.codex/skills/swarm-agent/: SKILL.md
.codex/skills/swarm-orchestrator/: SKILL.md
.gemini/skills/swarm-agent/: SKILL.md
.gemini/skills/swarm-orchestrator/: SKILL.md
.opencode/skills/swarm-agent/: SKILL.md
.opencode/skills/swarm-orchestrator/: SKILL.md
.qwen/skills/swarm-agent/: SKILL.md
.qwen/skills/swarm-orchestrator/: SKILL.md
memory-bank/: activeContext.md  progress.md  projectBrief.md  systemPatterns.md  techContext.md
src/swarm/: __init__.py  cli.py  db.py  models.py  utils.py  version.json
src/swarm/commands/: __init__.py  agent.py  common.py  init.py  lock.py  logs.py  monitor.py  path_cmd.py  start.py  task.py  terminal.py  tui.py
src/swarm/resources/launchers/: claude-safe-launch.ps1  claude-yolo-launch.ps1  codex-safe-launch.ps1  codex-yolo-launch.ps1  gemini-safe-launch.ps1  gemini-yolo-launch.ps1  opencode-safe-launch.ps1  opencode-yolo-launch.ps1  qwen-safe-launch.ps1  qwen-yolo-launch.ps1
src/swarm/terminal/: __init__.py  launcher_registry.py  layouts.py  preflight.py  prompt_builder.py  spec.py
tests/: __init__.py  conftest.py  test_agents.py  test_cli.py  test_common.py  test_db.py  test_edge_cases.py  test_lock.py  test_models.py  test_spec.py  test_tasks.py  test_terminal_cmd.py  test_utils.py
