[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarm-orchestrator"
version = "1.0.0"
description = "Система оркестрации мультиагентной среды для координации LLM-агентов"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "SWARM Team" }
]
keywords = ["swarm", "orchestration", "llm", "agents", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=0.47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
swarm = "swarm.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/swarm"]

[tool.hatch.build.targets.sdist]
include = [
    "src/swarm/**",
    "tests/**",
    "README.md",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # Длина строк (документация)
    "W291",   # Trailing whitespace
    "W293",   # Blank line contains whitespace
    "B008",   # Function call in default argument (typer pattern)
    "B904",   # raise ... from (не критично для CLI)
    "SIM108", # Ternary operator (читаемость)
    "UP042",  # StrEnum (совместимость с Python 3.10)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
